# rmlui-godot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: sync_examples.cmake
docs/: rendering_pipeline_analysis.md
examples/advanced/drag_and_drop/: drag_and_drop.gd
examples/basic/hello_world/: hello_world.gd  hello_world.tscn
examples/data_binding/: data_binding.gd  data_binding.rml  data_binding.tscn
examples/drag_and_drop/: drag.rml  drag_and_drop.gd  drag_and_drop.tscn
examples/hello_world/: hello.rml  hello_world.gd  hello_world.tscn
examples/showcase/visual_parity/: test_visual_parity.tscn
examples/stress/scissor_limits/: scissor_limits.rml  scissor_limits.tscn
project/: project.godot
project/addons/rmlui-godot/: base.rcss  plugin.cfg  rmlui_godot.gdextension
project/addons/rmlui-godot/editor/: rcss_syntax_highlighter.gd  rml_inspector_plugin.gd  rml_preview_panel.gd  rmlui_editor_plugin.gd
project/addons/rmlui-godot/shaders/: rmlui_canvas_item.gdshader  rmlui_decorator_template.gdshader
project/tests/: test_context_lifecycle.gd  test_data_binding.gd  test_document_management.gd  test_error_recovery.gd  test_event_listeners.gd  test_runner.gd
src/rmlui_godot/: GodotElementInstancer.cpp  GodotElementInstancer.hpp  GodotEventListener.cpp  GodotEventListener.hpp  GodotEventListenerInstancer.cpp  GodotEventListenerInstancer.hpp  GodotFileInterface.cpp  GodotFileInterface.hpp  GodotFontInterface.cpp  GodotFontInterface.hpp  GodotRenderInterface.cpp  GodotRenderInterface.hpp  GodotSystemInterface.cpp  GodotSystemInterface.hpp  RmlContext.cpp  RmlContext.hpp  RmlElementHandle.cpp  RmlElementHandle.hpp  RmlGD.hpp  RmlManager.cpp  RmlManager.hpp  register_types.cpp  register_types.h
